2010-07-12  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Yury Semikhatsky.

        [Chromium] Crash when stepping on a breakpoint while debugging Web Inspector
        https://bugs.webkit.org/show_bug.cgi?id=41958

        WebCore:
        * page/PageGroupLoadDeferrer.cpp:
        (WebCore::PageGroupLoadDeferrer::PageGroupLoadDeferrer):
        * page/PageGroupLoadDeferrer.h:

        WebKit/chromium:
        * src/WebViewImpl.cpp:
        (WebKit::WebView::willEnterModalLoop):
        (WebKit::WebView::didExitModalLoop):


Canonical link: https://commits.webkit.org/53948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63080 268f45cc-cd09-0410-ab3c-d52691b4dbfc